# Argon

./: .gitignore  CMakeLists.txt  README.md
docs/: bnf.txt
examples/: CMakeLists.txt  basic_input.cpp  conversion_function.cpp  custom_error_msg.cpp  multiple_inputs.cpp  option_chaining.cpp
include/Argon/: Argon.hpp  Ast.hpp  Ast.tpp  Attributes.hpp  Constraints.hpp  Context.hpp  Context.tpp  Error.hpp  Error.tpp  Flag.hpp  HelpMessage.hpp  MultiOption.hpp  Option.hpp  Option.tpp  Parser.hpp  Parser.tpp  ParserConfig.hpp  Scanner.hpp  Scanner.tpp  StringUtil.h  StringUtil.hpp  StringUtil.tpp  Traits.hpp
include/Argon/Config/: ConfigHelpers.hpp  ContextConfig.hpp  ContextConfigForwarder.hpp  GetConfig.hpp  OptionConfig.hpp  Types.hpp
include/Argon/Options/: GetConfig.hpp  IOption.hpp  MultiOption.hpp  Option.hpp  OptionCharBase.hpp  OptionComponent.hpp  OptionGroup.hpp  OptionHolder.hpp  OptionIntegralBaseImpl.hpp  OptionTypeExtensions.hpp  Positional.hpp  SetValue.hpp
src/: Argon.cpp  Ast.cpp  Context.cpp  Error.cpp  Option.cpp  Parser.cpp  Scanner.cpp  StringUtil.cpp
tests/: AttributesTest.cpp  CMakeLists.txt  ConstraintsTest.cpp  ErrorTestFunctions.hpp  ErrorTests.cpp  ScannerTest.cpp  Testing.hpp  attributes_test.cpp  error_tests.cpp  main_test.cpp  options_test.cpp  scanner_test.cpp  test_main.cpp  testing.hpp
